fixtures/frontend/milestone-2/valid/domain-member-resolution/main.aivi
domain Duration over Int
    literal ms : Int -> Duration
    make : Int -> Duration
    value : Duration -> Int

domain Count over Int
    make : Int -> Count

domain NonEmpty A over List A
    singleton : A -> NonEmpty A
    head : NonEmpty A -> A

val delay : Duration = make 250
val delayMillis : Int = value delay
val literalMillis : Int = value 250ms
val first : Int = head (singleton 1)

export first
