fixtures/frontend/milestone-2/invalid/ambiguous-domain-literal-suffix/main.aivi
domain Duration over Int
    literal ms : Int -> Duration

domain Milliseconds over Int
    literal ms : Int -> Milliseconds

value delay = 250ms
